--- a/index.html
+++ b/index.html
@@ -1,12 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
+    <script
+    src="https://code.jquery.com/jquery-3.2.1.min.js"
+    integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
+    crossorigin="anonymous"></script>
+    <script src="app.js"></script>
     <title>Portfolio</title>
 </head>
 <body>
-    
+    <!-- <div class="nav">
+        <a href="#">Homepage</a>
+        <a href="#">LinkedIn</a>
+        <a href="#">GitHub</a>
+        <a href="#">Contact</a>
+    </div> -->
+    <!-- <h1>Portfolio</h1> -->
+<!-- <div class="container">
+        <div class="info">
+            <div>
+                <div class="info-text">
+                    <h2>TEXT</h2>
+                </div>
+            </div>
+        </div>
+        <div class="carousel">
+            <div class="carousel-content">
+                <p>Text</p>
+            </div>
+        </div>
+        <div class="picture">
+            <img src="../firstPortfolio/images/20221101_195131.jpg">
+        </div>
+    </div> -->
 </body>
 </html>
